--- a/part1/e1.1to1.5.md
+++ b/part1/e1.1to1.5.md
@@ -36,6 +36,7 @@ docker exec ubulu apt-get install -y curl wget
 docker attach ubulu  
 helsinki.fi  
 Searching..  
+```
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <html><head>
 <title>301 Moved Permanently</title>
@@ -43,5 +44,41 @@ Searching..
 <h1>Moved Permanently</h1>
 <p>The document has moved <a href="http://www.helsinki.fi/">here</a>.</p>
 </body></html>
+```
 
+
+## 1.6 
+
+###### Dockerfile 
+FROM devopsdockeruh/overwrite_cmd_exercise
+
+CMD ["-c"]
+
+###### commands
+docker build -t docker-clock .  
+docker run docker-clock
+
+## 1.7
+###### Dockerfile 
+FROM ubuntu:16.04 
+
+RUN apt-get update && apt-get install -y curl 
+
+CMD echo "Input website:"; read website; echo "Searching.."; sleep 1; curl http://$website;
+
+###### commands
+ docker build -t curler .  
+docker run -it curler  
+Input website:  
+helsinki.fi  
+Searching..  
+```
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">  
+<html><head>  
+<title>301 Moved Permanently</title>  
+</head><body>  
+<h1>Moved Permanently</h1>  
+<p>The document has moved <a href="http://www.helsinki.fi/">here</a>.</p>  
+</body></html>  
+```
 
